--- a/css/style.css
+++ b/css/style.css
@@ -657,7 +657,7 @@
 
 
 /* contact */
-.contact {
+.contactus {
     position: relative;
     background: url("../images/contact/contact_bg.jpg");
     background-position: center top;
