--- a/css/base.css
+++ b/css/base.css
@@ -264,9 +264,9 @@ li.first:hover:after {
 }
 
 .footer-top .item {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
     float: left;
     height: 120px;
     overflow: hidden;
