--- a/css/example_detail.css
+++ b/css/example_detail.css
@@ -50,9 +50,11 @@ body {
 }
 
 .video {
+	display: block;
 	position: absolute;
 	left: 29px;
     top: 28px;
+    background: #000;
 }
 
 .exd-project {
