--- a/css/example_detail.css
+++ b/css/example_detail.css
@@ -14,7 +14,7 @@ body {
 }
 
 .exd-header {
-	padding: 100px 0 150px 185px;
+	padding: 100px 0 150px 240px;
 }
 
 .exd-title {
@@ -104,7 +104,7 @@ body {
 
 .exd-project-txt {
 	display: inline-block;
-	width: 480px;
+	width: 479px;
 	height: 100px;
 	vertical-align: top;
 	padding: 0 50px 0 30px;
@@ -193,13 +193,13 @@ body {
 	display: inline-block;
 	margin-right: 8px;
 	vertical-align: middle;
-	width: 180px;
+	width: 30%;
     margin-bottom: 8px;
 }
 
 .exd-result-img li > img {
 	width: 100%;
-    height: 145px;
+    height: auto;
 }
 
 @media (max-width: 1199px) and (min-width: 985px) {
