--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,51 @@
     background-color: #e95f24;
 }
 
+.caption-txt {
+    display: block;
+    font-size: 24px;
+    color: #c9caca;
+    line-height: 35px;
+}
+
+.swiper-slide-caption .intro1-txt {
+    margin-top: 15px;
+}
+
+.intro2-title {
+    margin-top: -200px !important;
+}
+
+.swiper-slide-caption .intro2-txt {
+    color: #907c51;
+    font-size: 30px;
+    margin-top: 20px;
+}
+
+.swiper-slide-caption .intro2-menu {
+    width: 300px;
+    padding: 10px 0px 10px 15px;
+    margin: 10px auto 0;
+    background: url(../images/swiper/intro-02-btn.png) no-repeat 0 center;
+    text-align: center;
+}
+
+.intro2-menu span,
+.intro2-menu img {
+    vertical-align: bottom;
+    color: #fce6b6;
+    font-size: 16px;
+    letter-spacing: 1px;
+}
+
+.intro2-menu .menu1 {
+    margin-left: -25px;
+}
+
+.intro2-menu .menu2 {
+    margin-left: 27px;
+}
+
 /* about */
 .about {
     position: relative;
@@ -860,13 +905,6 @@
 
 .orange {
     color: #e95f24;
-}
-
-.caption-txt {
-    display: block;
-    font-size: 24px;
-    color: #c9caca;
-    line-height: 35px;
 }
 
 .btn {
