--- a/css/style.css
+++ b/css/style.css
@@ -534,8 +534,8 @@
 
 .member .txt {
     color: #fff;
-    font-size: 14px;
-    padding-top:10px;
+    font-size: 16px;
+    /*padding-top:10px;*/
 }
 
 
