--- a/css/example.css
+++ b/css/example.css
@@ -114,6 +114,21 @@
 	background: #636163;
 	overflow: hidden;
 }
+.ex-list-img img{
+	-webkit-transform: scale(1);
+	-moz-transform: scale(1);
+	-ms-transform: scale(1);
+	transform: scale(1);
+	-webkit-transition: -webkit-transform 0.5s;
+	-moz-transition: -moz-transform 0.5s;
+	-ms-transition: -moz-transform 0.5s transition: transform 0.5s;
+}
+.ex-tab-list li:hover .ex-list-img img{
+	-webkit-transform: scale(1.1);
+	-moz-transform: scale(1.1);
+	-ms-transform: scale(1.1);
+	transform: scale(1.1);
+}
 
 .ex-list-ft {
 	padding: 10px 20px;
